# CS6235-Final-Project

./: .gitignore  README.md
cnn_cuda/: Makefile  cnn.assign.cu  driver.cu  script.kingspeak
cnn_kokkos/: CMakeLists.txt  cnn_kokkos.cpp  kokkos_help.txt
